src/public/css/main.css
:root {
  --color-light: #FFF;
  --color-dark: #000;

  --color-text: #EEE;
  --color-text-soft: #AAA;

  --color-background: #333;
  --color-background-light: #444;
  --color-background-dark: #222;

  --color-primary-burn: #334;
  --color-primary: #335;
  --color-primary-accent: #337;

  --color-secondary-burn: #343;
  --color-secondary: #353;
  --color-secondary-accent: #373;

  --offset-small: 0.5em;
  --offset-normal: 1em;
  --offset-large: 2em;

  --font-size-xsmall: 10pt;
  --font-size-small: 14pt;
  --font-size-normal: 18pt;
  --font-size-large: 22pt;
  --font-size-xlarge: 26pt;

  --font-size-heading-xsmall: 32pt;
  --font-size-heading-small: 48pt;
  --font-size-heading-normal: 64pt;
  --font-size-heading-large: 80pt;
  --font-size-heading-xlarge: 96pt;

  --font-normal: "Ubuntu", sans-serif;
  --font-logo: "League Spartan", sans-serif;
  --font-nav: "Nunito Sans", sans-serif;
}

/**********/
/* STYLES */
/**********/

.padding-small {
  padding: var(--offset-small);
}

.padding-normal {
  padding: var(--offset-normal);
}

.padding-large {
  padding: var(--offset-large);
}

.padding-x-small {
  padding-left: var(--offset-small);
  padding-right: var(--offset-small);
}

.padding-x-normal {
  padding-left: var(--offset-normal);
  padding-right: var(--offset-normal);
}

.padding-x-large {
  padding-left: var(--offset-large);
  padding-right: var(--offset-large);
}

.padding-y-small {
  padding-bottom: var(--offset-small);
  padding-top: var(--offset-small);
}

.padding-y-normal {
  padding-bottom: var(--offset-normal);
  padding-top: var(--offset-normal);
}

.padding-y-large {
  padding-bottom: var(--offset-large);
  padding-top: var(--offset-large);
}

.font-size-xsmall {
  font-size: var(--font-size-xsmall);
}

.font-size-small {
  font-size: var(--font-size-small);
}

.font-size-normal {
  font-size: var(--font-size-normal);
}

.font-size-large {
  font-size: var(--font-size-large);
}

.font-size-xlarge {
  font-size: var(--font-size-xlarge);
}

.font-size-heading-xsmall {
  font-size: var(--font-size-heading-xsmall);
}

.font-size-heading-small {
  font-size: var(--font-size-heading-small);
}

.font-size-heading-normal {
  font-size: var(--font-size-heading-normal);
}

.font-size-heading-large {
  font-size: var(--font-size-heading-large);
}

.font-size-heading-xlarge {
  font-size: var(--font-size-heading-xlarge);
}

.text-align-left {
  text-align: start;
}

.text-align-center {
  text-align: center;
}

.text-align-right {
  text-align: right;
}

/************/
/* ELEMENTS */
/************/

h1 {
  margin-block-start: 0;
  margin-block-end: 0;
  font-size: var(--font-size-normal);
  font-weight: normal;
}

h2 {
  margin-block-start: 0;
  margin-block-end: 0;
  font-size: var(--font-size-normal);
  font-weight: normal;
}

h3 {
  margin-block-start: 0;
  margin-block-end: 0;
  font-size: var(--font-size-normal);
  font-weight: normal;
}

h4 {
  margin-block-start: 0;
  margin-block-end: 0;
  font-size: var(--font-size-normal);
  font-weight: normal;
}

h5 {
  margin-block-start: 0;
  margin-block-end: 0;
  font-size: var(--font-size-normal);
  font-weight: normal;
}

h6 {
  margin-block-start: 0;
  margin-block-end: 0;
  font-size: var(--font-size-normal);
  font-weight: normal;
}

ol {
  padding: 0;
  list-style-type: none;
}

ul {
  padding: 0;
  list-style-type: none;
}

a {
  color: var(--color-text);
  text-decoration: none;
}

a:hover:not(.no-hover), a *:hover:not(.no-hover) {
  color: var(--color-secondary-accent);
}

a svg:hover:not(.no-hover) {
  fill: url(#hover);
}

button {
  font-size: var(--font-size-large);
  border: 2px solid;
  border-color: var(--color-text);
  border-radius: 6px;
  background-color: transparent;
  color: var(--color-text);
}

button:hover:not(.no-hover) {
  border-color: var(--color-secondary-accent);
  color: var(--color-secondary-accent);
  cursor: pointer;
}

/***********/
/* GENERAL */
/***********/

.no-hover {}

.svg-hover-start { stop-color: var(--color-primary); }
.svg-hover-end { stop-color: var(--color-secondary-accent); }

.heading {
  padding-bottom: var(--offset-normal);
  font-size: var(--font-size-heading-normal);
  text-align: center;
}

.subheading {
  padding-bottom: var(--offset-small);
  font-size: var(--font-size-heading-xsmall);
  text-align: center;
}

.section {
  padding: var(--offset-large);
}

.tooltip {
  padding-left: var(--offset-small);
  padding-right: var(--offset-small);
  font-size: var(--font-size-small);
  background-color: var(--color-primary);
  border: 2px solid var(--color-primary-accent);
  border-radius: 3px;
  transition: opacity 0.25s ease-out;
  opacity: 0;
}

.tooltip.active {
  opacity: 1;
}

/**********/
/* LAYOUT */
/**********/

/* MAIN */

html,
body {
  margin: 0;
  min-width: 320px;
  color: var(--color-text);
  font-family: var(--font-normal);
  font-size: var(--font-size-normal);
  background: var(--color-background);
}

/* HEADER */

header {
  width: 100%;
  min-height: 8vh;
  position: fixed;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  z-index: 1;
}

header > * {
  padding-left: var(--offset-large);
  padding-right: var(--offset-large);
  display: flex;
  align-items: center;
}

header.scrolled {
  background-color: var(--color-background);
}

.header-nav {
  justify-content: flex-end;
}

nav {
  display: flex;
  justify-content: flex-end;
}

nav > * {
  padding-left: var(--offset-large);
  text-align: right;
  font-family: var(--font-nav);
  font-weight: bold;
}

/* SPLASH */

.section-splash {
  height: 100vh;
  background: linear-gradient(165deg, var(--color-secondary) 0%, var(--color-primary) 35%, var(--color-primary-burn) 100%);
}

.splash-container {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.splash-logo {
  text-align: center;
  font-family: var(--font-logo);
  letter-spacing: 3px;
  animation: 1s fadeInDown;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
}

.splash-title {
  text-align: center;
  font-family: var(--font-logo);
  animation: 0.75s fadeInDown;
  animation-delay: 0.25s;
  animation-fill-mode: backwards;
  -webkit-font-smoothing: antialiased;
}

.splash-icons {
  padding: 0 40% 0 40%;
  display: flex;
  column-gap: var(--offset-normal);
  flex-direction: row;
  justify-content: space-between;
}

.splash-icons svg {
  width: 100%;
  height: 100%;
}

.splash-icons svg:hover {
  fill: var(--color-secondary-accent)!important;
}

.splash-icons a:nth-child(1) { animation: 1.5s fadeIn; animation-delay: 0.75s; animation-fill-mode: backwards; }
.splash-icons a:nth-child(2) { animation: 1.5s fadeIn; animation-delay: 1.25s; animation-fill-mode: backwards; }
.splash-icons a:nth-child(3) { animation: 1.5s fadeIn; animation-delay: 1.75s; animation-fill-mode: backwards; }

/* ABOUT */

.section-about {
  background: linear-gradient(180deg, #32324D 0%, var(--color-background) 40%);
}

.section-about > div {
  padding: var(--offset-large);
}

.about-columns {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

.about-technologies-container {
  padding: 0 20% 0 20%;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: var(--offset-large);
  justify-content: space-between;
  align-items: center;
}

.about-technologies-container svg {
  width: 100%;
  height: 100%;
}

/* PROJECT */

.section-project {
  padding-left: 0;
  padding-right: 0;
}

.project-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  row-gap: 10vh;
  justify-items: center;
}

.project-item-header {
  display: flex;
  justify-content: space-between;
}

.project-item-badges {
  justify-content: flex-end;
  align-self: flex-end;
}

.project-item-badges > svg {
  padding: 1px;
  width: 32px;
  height: 32px;
  border-radius: 16px;
}

.project-item-preview > img {
  max-width: 320px;
  max-height: 300px;
  object-fit: cover;
  border: 1px solid var(--color-light);
  border-radius: 6px;
}

.project-item-footer {
  display: flex;
  justify-content: flex-end;
}

.project-item-footer > * {
  margin-left: var(--offset-small);
}

/* CONTACT */

.section-contact {
  background-color: var(--color-background-light);
}

.contact-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

/* TRANSITION */

.transition {
  margin-bottom: -6px;
}

.transition > svg {
  width: 100%;
  height: 100%;
  fill: var(--color-background-dark);
}

/* FOOTER */

footer {
  min-height: 12vh;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  align-content: center;
  justify-content: flex-end;
  color: var(--color-secondary-burn);
  background-color: var(--color-background-dark);
}

@media only screen and (max-width: 1280px) {
  .project-container {
    grid-template-columns: 1fr;
  }

  .splash-icons {
    padding: 0 20% 0 20%;
  }

  .about-technologies-container {
    padding: 0;
    grid-template-columns: repeat(3, 1fr);
    gap: var(--offset-large);
  }
}

@media only screen and (max-width: 768px) {
  header {
    display: none;
  }
}

